// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Temporal.PlainDate > crossSerialize > scoped > supports Temporal.PlainDate 1`] = `"($R=>$R[0]=Temporal.PlainDate.from("2012-03-04"))($R["example"])"`;

exports[`Temporal.PlainDate > crossSerialize > supports Temporal.PlainDate 1`] = `"$R[0]=Temporal.PlainDate.from("2012-03-04")"`;

exports[`Temporal.PlainDate > crossSerializeAsync > scoped > supports Temporal.PlainDate 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=Temporal.PlainDate.from("2012-03-04")))($R["example"])"`;

exports[`Temporal.PlainDate > crossSerializeAsync > supports Temporal.PlainDate 1`] = `"$R[0]=Promise.resolve($R[1]=Temporal.PlainDate.from("2012-03-04"))"`;

exports[`Temporal.PlainDate > crossSerializeStream > scoped > supports Temporal.PlainDate 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`Temporal.PlainDate > crossSerializeStream > scoped > supports Temporal.PlainDate 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Temporal.PlainDate.from("2012-03-04")))($R["example"])"
`;

exports[`Temporal.PlainDate > crossSerializeStream > supports Temporal.PlainDate 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`Temporal.PlainDate > crossSerializeStream > supports Temporal.PlainDate 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Temporal.PlainDate.from("2012-03-04"))"
`;

exports[`Temporal.PlainDate > serialize > supports Temporal.PlainDate 1`] = `"Temporal.PlainDate.from("2012-03-04")"`;

exports[`Temporal.PlainDate > serializeAsync > supports Temporal.PlainDate 1`] = `"Promise.resolve(Temporal.PlainDate.from("2012-03-04"))"`;

exports[`Temporal.PlainDate > toCrossJSON > supports Temporal.PlainDate 1`] = `"{"t":36,"i":0,"s":"2012-03-04","c":2}"`;

exports[`Temporal.PlainDate > toCrossJSONAsync > supports Temporal.PlainDate 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":36,"i":1,"s":"2012-03-04","c":2}}"`;

exports[`Temporal.PlainDate > toCrossJSONStream > supports Temporal.PlainDate 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`Temporal.PlainDate > toCrossJSONStream > supports Temporal.PlainDate 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":36,"i":3,"s":"2012-03-04","c":2}]}"`;

exports[`Temporal.PlainDate > toJSON > supports Temporal.PlainDate 1`] = `"{"t":{"t":36,"i":0,"s":"2012-03-04","c":2},"f":127,"m":[]}"`;

exports[`Temporal.PlainDate > toJSONAsync > supports Temporal.PlainDate 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":36,"i":1,"s":"2012-03-04","c":2}},"f":127,"m":[]}"`;
